# rlm_protobuf

./: Makefile.in  README.md  configure  configure.in
config/: aclocal.m4
config/m4/: rssh_check_freeradius_src.m4  rssh_check_protobuf.m4
config/unix/: entry.mak  entry.mak.in
docs/: protobuf
src/: Makefile.in  rlm_protobuf.c  rlm_protobuf_config.h  rlm_protobuf_config.h.in  rlm_protobuf_postconfig.h  vsa.proto
test-server/: README
test-server/rlmprototest/: pom.xml
test-server/rlmprototest/src/main/java/ua/gradsoft/rlmprototest/: RadiusConstants.java  RlmEndpointServlet.java
test-server/rlmprototest/src/main/webapp/WEB-INF/: web.xml
